feat(vistoria): consolida jornada de evidências do cliente